resource module and dashboard

--- a/src/main/resources/static/pages/subject.html
+++ b/src/main/resources/static/pages/subject.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Subject Management</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/subject.css">
 </head>
 <body>
   <div class="container">
@@ -33,6 +33,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="../js/subject.js"></script>
 </body>
 </html>
