finished resource module

--- a/src/main/resources/static/pages/dashboard.html
+++ b/src/main/resources/static/pages/dashboard.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="../css/dashboard.css">
+  <link rel="stylesheet" href="/css/dashboard.css">
 </head>
 <body>
   <h1>StudyBuddy</h1>
   
   <div class="module-navigation">
-    <button onclick="navigateTo('subject.html')">Subject Module</button>
-    <button onclick="navigateTo('resource.html')">Resource Module</button>
+    <button onclick="navigateTo('subject.html')">Subjects</button>
+    <button onclick="navigateTo('resource.html')">Study Resources</button>
     <button onclick="navigateTo('lastmodule.html')">Last Module</button>
   </div>
   
@@ -29,6 +29,6 @@
     <p class="recommend">Recommended set: 25 minutes working; 5 minutes break</p>
   </div>  
   
-  <script src="../js/dashboard.js"></script>
+  <script src="/js/dashboard.js"></script>
 </body>
 </html>
