finished all 3 modules

--- a/src/main/resources/static/pages/dashboard.html
+++ b/src/main/resources/static/pages/dashboard.html
@@ -12,7 +12,7 @@
   <div class="module-navigation">
     <button onclick="navigateTo('subject.html')">Subjects</button>
     <button onclick="navigateTo('resource.html')">Study Resources</button>
-    <button onclick="navigateTo('lastmodule.html')">Last Module</button>
+    <button onclick="navigateTo('progress.html')">Progress Tracking</button>
   </div>
   
   <div class="pomodoro-timer">
