--- a/src/main/resources/static/pages/resource.html
+++ b/src/main/resources/static/pages/resource.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="../css/resource.css">
 </head>
 <body>
+  <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
+    <button onclick="goToDashboard()" class="dashboard-btn" style="background-color: green; width: fit-content;">Back to Dashboard</button>
+  </div>
   <div class="container">
-
-    <button onclick="goToDashboard()" class="dashboard-btn" style="background-color: green;">Back to Dashboard</button>
-    
     <h1>Study Resources Management</h1>
 
     <!-- Add Resource Form -->
